force-app/main/default/objects/Schedule_Viewing__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedule Viewings</relationshipLabel>
    <relationshipName>Schedule_Viewings</relationshipName>
    <type>Lookup</type>
</CustomField>