force-app/main/default/objects/Schedule_Viewing__c/fields/Person_Account_Profiling__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Profiling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account Profiling</label>
    <referenceTo>Person_Account_Profiling__c</referenceTo>
    <relationshipLabel>Schedule Viewings</relationshipLabel>
    <relationshipName>Schedule_Viewings</relationshipName>
    <type>Lookup</type>
</CustomField>