force-app/main/default/objects/Schedule_Viewing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Person_Account_Profiling__c</columns>
    <columns>Contact__c</columns>
    <columns>Sales_Opportunity__c</columns>
    <columns>Used_Car_Vehicle_Stock__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Location__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>